# SYNEX-QUOTATION

./: .gitignore  README.md  build.bat  build.spec  installer.iss  main.py  pyproject.toml  requirements.txt  run.py  run_app.py  run_logs.txt  settings.json  tree.txt
.claude/: settings.local.json
DataBase/: .env  docker-compose.yml
DataBase/init/: 01_create_tables.sql  02_create_indexes.sql  03_insert_initial_data.sql
Server/: .env  BUILD_GUIDE.md  Dockerfile  docker-compose.yml  installer.iss  requirements-desktop.txt  requirements.txt  tree.txt
Server/app/: database.py  db_types.py  desktop_main.py  main.py
Server/tmp/: check_db_data.py  data.xlsx  debug_template.py  generate_svg.py  register_templates.py
backend/: alembic.ini  database.py  main.py
backend/alembic/: env.py
backend/api/: router.py
backend/core/: config.py  init_data.py  route_class.py  security.py
backend/models/: __init__.py  account.py  certification.py  detailed.py  detailed_resources.py  folder.py  general.py  header.py  header_resources.py  machine.py  machine_resources.py  maker.py  permission.py  price_compare.py  price_compare_machine.py  price_compare_resources.py  quotation.py  quotation_resources.py  resources.py  role.py  role_permission.py
backend/service/: router.py
database/: jlt_quotation.db
doc/: DATABASE.md  GEMINI.md  PLAN_FRONTEND_REFACTORING.md  Work_Log_20251212.md  Work_Log_20251214.md  database_erd_viewer.html
md/: DETAILED API.md  FOLDER API.md  GENERAL API.md  HEADER API.md  PRICE_COMPARE API.md
tmp/: SYNEX+QUOTATION INFO (1).xlsx  check_db_data.py  cleanup_duplicates.py  data.xlsx  debug_template.py  generate_svg.py  register_makers.py  register_parts.py  register_templates.py  reset_db.py  reset_t000.py  ~$SYNEX+QUOTATION INFO (1).xlsx
tools/: debug_template.py  generate_svg.py
tools/db/: check_data.py  (+2 more)
(+242 files in other folders)
